# GameManager

./: .gitignore  README.md  camera_sample.py  cameras.py  pyproject.toml  sample.py  setup.py  sprite_sheet_array.py
.github/workflows/: python-publish.yml
U-2-Net/: data_loader.py  u2net_test.py
U2Net/: data_loader.py  u2net_test.py
frame_interpolator/: surface_interpolator.py
game_manager/libs/U2Net/: data_loader.py  u2net_test.py
game_manager/libs/frame_interpolator/: surface_interpolator.py
game_manager/samples/: U_2_Netp_Demonstration_Colab.ipynb  camera_sample.py  game_settings.py  platformer.py  rotate_image.py  sample.py  tf_hub_film_example.ipynb
game_manager/samples/maps/resources/: level1.tmx
game_manager/samples/platform_samples/sample_01/: main.py
game_manager/samples/platform_samples/sample_01/levels/: level1.tmx
game_manager/src/: behaviors.py  cameras.py  collision.py  creator.py  image_rotate.py  image_to_mesh.py  levels.py  objects.py  path_finding.py  physics.py  pymunk_shapes.py  sound.py  sprite_sheet_array.py  ui.py
game_manager/utilities/: draw.py
