[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "game_manager"
version = "0.1"
description = "A brief description of your package"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT" }
authors = [
    { name = "Morteza Maleki", email = "maleki.morteza92@gmail.com" }
]
dependencies = [
    "numpy",
    "natsort",
    "pygame"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
urls = { "Homepage" = "https://github.com/mmaleki92/GameMananger" }

[tool.setuptools.package-data]
"" = ["samples/graphics/*.png"]
